@@ -3,6 +3,7 @@ h1. CHANGELOG
 
 h3. 3.1.8 May 29, 2016
 
+* remove WEBrick option (Puma is default for Rails 5)
 * remove Figaro as an option (closes rails-composer issue #209)
 * remove option to create an RVM gemset
 
